# debian-cloud-images

./: .gitignore  .gitlab-ci.yml  MANIFEST.in  Makefile  README.md  Readme.md  copyright  pyproject.toml  pytest.ini  setup.cfg  setup.py  update-ci  volume-to-ami.sh
.gitlab/ci/: generated-daily.yml  generated-release.yml  generated.yml
class/: 11-cloud-defaults  DEBIAN.var  EC2.var
config_space/class/: AZURE.var  BOOKWORM.var  BULLSEYE.var  BUSTER.var  DEBIAN.var  EC2.var  OPENSTACK.var  STRETCH.var
config_space/debconf/: AZURE  CLOUD  DEBIAN  EC2  GCE
config_space/disk_config/: CLOUD
config_space/hooks/: mountdisks.CLOUD  partition.GRUB_CLOUD_AMD64  partition.GRUB_EFI_ARM64  partition.GRUB_IEEE1275  repository.CLOUD  tests.CLOUD  updatebase.DEBIAN
config_space/package_config/: AMD64  ARM64  AZURE  BUSTER  CLOUD  DEBIAN  EC2  EXTRAS  GCE  GENERIC  OPENSTACK  PPC64EL  VAGRANT
debconf/: GCE
debian/: changelog  control  copyright  debian-cloud-images.install  debian-cloud-images.lintian-overrides  rules
debian_cloud_images/cli/: __main__.py  all.py  base.py  build.py  upload_base.py  upload_ec2.py  upload_gce.py
debian_cloud_images/images/: __init__.py
debian_cloud_images/utils/: argparse_ext.py
disk_config/: CLOUD
doc/: README.md  details.md
doc/manifest/: README.md  build.md  conventions.md  labels.md  upload.md
doc/usage/: README.md  build.md  upload_azure.md  upload_azure_cloudpartner.md  upload_ec2.md  upload_gce.md
package/debian/: changelog  control  rules  source.substvars
package_config/: CLOUD  STANDARD
scripts/CLOUD/: 99-cleanup
(+401 files in other folders)
