[metadata]
name = debian_cloud_images
version = 0
license = GNU General Public License v2 or later (GPLv2+)
classifiers =
    Programming Language :: Python :: 3
    Operating System :: POSIX :: Linux

[options]
python_requires = >=3.11
zip_safe = False
include_package_data = True
package_dir =
    =src
packages = find_namespace:
install_requires =
    apache-libcloud
    marshmallow>=3.0.0b14
    PyYAML

[options.entry_points]
console_scripts =
    debian-cloud-images = debian_cloud_images.cli.__main__:main

[options.extras_require]
mypy =
    types-PyYAML
    types-requests
    types-setuptools
tests =
    requests-mock

[options.packages.find]
where = src

[flake8]
ignore =
    E501
    W503
